--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@
   --card-bg: #ffffff;
   --text: #1e293b;
   --text-light: #64748b;
-  --border: #e2e8f0;
+  --border: #dcdcdc;
   --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1);
   --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1);
 }
